# bt-embedded

./: .clang-format  CMakeLists.txt  LICENSE.txt  README.md
.github/actions/install/gcovr/: action.yml
.github/workflows/: ci.yml
bt-embedded/: CMakeLists.txt  acl.c  acl.h  backend.h  bte.c  bte.h  buffer.h  client.c  client.h  data_matcher.h  driver.h  hci.c  hci.h  hci_dev.c  hci_proto.h  internals.h  l2cap.c  l2cap.h  l2cap_proto.h  logging.h  platform_defs.h  types.h  utils.h
bt-embedded/backends/: wii.c
bt-embedded/drivers/: wii.c
example/: CMakeLists.txt  main.c  terminal.c
tests/: CMakeLists.txt  bte_cpp.h  bte_l2cap_cpp.h  dummy_driver.c  dummy_driver.h  helpers.h  mock_backend.cpp  mock_backend.h  test_buffer.cpp  test_commands.cpp  test_cpp_api.cpp  test_data_matcher.cpp  test_events.cpp  test_hci_dev.cpp  test_l2cap_config.cpp  test_l2cap_connect.cpp  type_utils.h  valgrind.supp
